<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:id="@+id/mainFrag">

    <TextView
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/boothButton" />

    <Button
        android:id="@+id/mainButton"
        android:textSize="25sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/main_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/coMainButton"
        android:textSize="25sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/co_main_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainButton" />

    <Button
        android:id="@+id/logoButton"
        android:textSize="25sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/logos_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/coMainButton" />

    <Button
        android:id="@+id/boothButton"
        android:textSize="25sp"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/booth_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logoButton" />

    <TextView
        android:id="@+id/mainEventCostTextView"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/main_price"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/coMainEventCostTextView"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/co_main_price"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainEventCostTextView"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/logoCostTextView"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/logo_price"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/coMainEventCostTextView"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/boothCostTextView"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/booth_price"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logoCostTextView"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/winterButton"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/winter"
            android:id="@+id/winterButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/spring"
            android:id="@+id/springButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/summer"
            android:id="@+id/summerButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/fall"
            android:id="@+id/fallButton"/>
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="278dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="278dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</android.support.constraint.ConstraintLayout>